Ensure product images fill the container vertically without extra space
Update CSS to make product images have a height of 100% to match design specifications.

--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ body {
 
 .product-image img {
   width: 100%;
-  height: 240px;
+  height: 100%;
   object-fit: cover;
   display: block;
 }
@@ -172,7 +172,7 @@ body {
   }
   
   .product-image img {
-    height: 450px;
+    height: 100%;
   }
   
   .product-content {
